crates/pg_syntax/tests/snapshots/postgres_regress/json@252.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia3 FROM json_populate_record(NULL::jsrec, '{\"ia3\": [ [[1, 2], [3, 4]], [[5, 6], [7, 8]] ]}') q;"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "ia3"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..102
    List@16..99
      FuncCall@16..99
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..99
          Sconst@50..99 "'{\"ia3\": [ [[1, 2], [ ..."
    Ascii41@99..100 ")"
    Whitespace@100..101 " "
    Alias@101..102
      Ident@101..102 "q"
  Ascii59@102..103 ";"

