crates/pg_syntax/tests/snapshots/postgres_regress/json@253.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia3 FROM json_populate_record(NULL::jsrec, '{\"ia3\": [ [[1, 2], [3, 4]], [[5, 6], [7, 8], [9, 10]] ]}') q;"
---
SelectStmt@0..112
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..10 "ia3"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeFunction@16..111
    List@16..108
      FuncCall@16..108
        Ident@16..36 "json_populate_record"
        Ascii40@36..37 "("
        TypeCast@37..48
          AConst@37..41
            NullP@37..41 "NULL"
          Typecast@41..43 "::"
          TypeName@43..48
            Ident@43..48 "jsrec"
        Ascii44@48..49 ","
        Whitespace@49..50 " "
        AConst@50..108
          Sconst@50..108 "'{\"ia3\": [ [[1, 2], [ ..."
    Ascii41@108..109 ")"
    Whitespace@109..110 " "
    Alias@110..111
      Ident@110..111 "q"
  Ascii59@111..112 ";"

