crates/pg_syntax/tests/snapshots/postgres_regress/json@256.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ta FROM json_populate_record(NULL::jsrec, '{\"ta\": [1, \"2\", null, 4]}') q;"
---
SelectStmt@0..80
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ta"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..79
    List@15..76
      FuncCall@15..76
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..76
          Sconst@49..76 "'{\"ta\": [1, \"2\", null ..."
    Ascii41@76..77 ")"
    Whitespace@77..78 " "
    Alias@78..79
      Ident@78..79 "q"
  Ascii59@79..80 ";"

