crates/pg_syntax/tests/snapshots/postgres_regress/json@258.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c FROM json_populate_record(NULL::jsrec, '{\"c\": null}') q;"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "c"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..64
    List@14..61
      FuncCall@14..61
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..46
          AConst@35..39
            NullP@35..39 "NULL"
          Typecast@39..41 "::"
          TypeName@41..46
            Ident@41..46 "jsrec"
        Ascii44@46..47 ","
        Whitespace@47..48 " "
        AConst@48..61
          Sconst@48..61 "'{\"c\": null}'"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    Alias@63..64
      Ident@63..64 "q"
  Ascii59@64..65 ";"

