crates/pg_syntax/tests/snapshots/postgres_regress/json@259.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c FROM json_populate_record(NULL::jsrec, '{\"c\": \"aaa\"}') q;"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "c"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..65
    List@14..62
      FuncCall@14..62
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..46
          AConst@35..39
            NullP@35..39 "NULL"
          Typecast@39..41 "::"
          TypeName@41..46
            Ident@41..46 "jsrec"
        Ascii44@46..47 ","
        Whitespace@47..48 " "
        AConst@48..62
          Sconst@48..62 "'{\"c\": \"aaa\"}'"
    Ascii41@62..63 ")"
    Whitespace@63..64 " "
    Alias@64..65
      Ident@64..65 "q"
  Ascii59@65..66 ";"

