crates/pg_syntax/tests/snapshots/postgres_regress/json@260.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c FROM json_populate_record(NULL::jsrec, '{\"c\": \"aaaaaaaaaa\"}') q;"
---
SelectStmt@0..73
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "c"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..72
    List@14..69
      FuncCall@14..69
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..46
          AConst@35..39
            NullP@35..39 "NULL"
          Typecast@39..41 "::"
          TypeName@41..46
            Ident@41..46 "jsrec"
        Ascii44@46..47 ","
        Whitespace@47..48 " "
        AConst@48..69
          Sconst@48..69 "'{\"c\": \"aaaaaaaaaa\"}'"
    Ascii41@69..70 ")"
    Whitespace@70..71 " "
    Alias@71..72
      Ident@71..72 "q"
  Ascii59@72..73 ";"

